update python nb

--- a/libretas/1a_python.ipynb
+++ b/libretas/1a_python.ipynb
@@ -7,8 +7,7 @@
     "id": "view-in-github"
    },
    "source": [
-    "<a href=\"https://colab.research.google.com/github/bereml/iap/blob/master/libretas/1a_python.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
-    "\n"
+    "<a href=\"https://colab.research.google.com/github/bereml/iap/blob/master/libretas/1a_python.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
   {
@@ -22,7 +21,7 @@
     "---\n",
     "---\n",
     "\n",
-    "[Python](https://www.python.org) es un lenguaje de programación interpretado que se distingue por ser sencillo y legible. Es multiparadigma (orientado a objetos, imperativo y un poco funcional), dinámico y multiplataforma.\n",
+    "[Python](https://www.python.org) es un lenguaje de programación interpretado que se distingue por ser sencillo y legible diseñado por el dictador benevolente [Guido van Rossum](https://www.youtube.com/watch?v=J0Aq44Pze-w). Es multiparadigma (orientado a objetos, imperativo y un poco funcional), dinámico y multiplataforma.\n",
     "\n",
     "Debido a estas características y su amplio ecosistema de bibliotecas de cómputo científico se ha convertido en la lengua franca de la comunidad de aprendizaje automatizado.\n",
     "\n",
@@ -1138,7 +1137,8 @@
    "source": [
     "# escribe código para imprimir el cuadrado \n",
     "# de los números enteros en l\n",
-    "l = range(10)\n"
+    "l = range(10)\n",
+    "\n"
    ]
   },
   {
@@ -1352,7 +1352,8 @@
     "# aritmetica(x, y, op='-') => x - y\n",
     "# aritmetica(x, y, op='*') => x * y\n",
     "# aritmetica(x, y, op='/') => x / y\n",
-    "# aritmetica(x, y)         => x / y\n"
+    "# aritmetica(x, y)         => x / y\n",
+    "\n"
    ]
   },
   {
@@ -1370,10 +1371,7 @@
    "source": [
     "# implementa una función recursiva que \n",
     "# compute el conjunto potencia\n",
-    "def powerset(s):\n",
-    "    pass\n",
-    "\n",
-    "powerset([0, 1, 2])"
+    "\n"
    ]
   },
   {
@@ -1504,7 +1502,8 @@
     "# define un diccionario por comprensión donde\n",
     "# las llaves sean los 10 primeros enteros multiplos de 3\n",
     "# y los valores el cubo de cada llave\n",
-    "# ej: {0: 0, 3: 9, 6: 36, 9: 81}\n"
+    "# ej: {0: 0, 3: 9, 6: 36, 9: 81}\n",
+    "\n"
    ]
   },
   {
@@ -1648,31 +1647,20 @@
     "\n",
     "$$\\sum_{i=1}^N f(x_i^ * ) (x_i - x_{i-1}) \\ \\ , \\ x_i^* \\in [x_{i-1},x_i]$$\n",
     "\n",
-    "Implementa la función `suma_riemann` que toma como parámetros la función $f$, el intervalo $[a, b]$, y el número de puntos $n$. "
+    "Implementa la función `suma_riemann` que toma como parámetros la función $f$, el intervalo $[a, b]$, y el número de puntos $n$."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 61,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def suma_riemann(f, a, b, n):\n",
-    "    return 0\n",
+    "    pass\n",
     "\n",
-    "# x^3 / 3\n",
-    "suma_riemann(cuadrado, 0, 3, 100000)"
+    "# [x^3 / 3]_0^3 ≈ 9\n",
+    "suma_riemann(cuadrado, 0, 3, 1000)"
    ]
   },
   {
@@ -1680,14 +1668,127 @@
    "metadata": {},
    "source": [
     "---\n",
-    "### 8 Matplotlib\n",
+    "### 8 Clases\n",
+    "\n",
+    "Una clase es una plantilla que define un estado y comportamientos para una familia de objetos. El estado está dado por variables llamadas atributos y los comportamientos para modificar ese estado por medio de funciones llamadas métodos. Un estado especifico se obtiene al instanciar la clase en un objeto.\n",
+    "\n",
+    "![clases](https://raw.githubusercontent.com/bereml/iap/master/fig/clases.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# clase base\n",
+    "class Vehiculo:\n",
+    "    \n",
+    "    def __init__(self, nombre='X', rapidez=0):\n",
+    "        self.nombre = nombre\n",
+    "        self.rapidez = rapidez\n",
+    "        \n",
+    "    def info(self):\n",
+    "        print(f'Vehículo {self.nombre} va a {self.rapidez} km/h.')\n",
+    "    \n",
+    "    def acelerar(self, cantidad):\n",
+    "        self.rapidez = self.rapidez + cantidad \n",
+    "\n",
+    "# Tamalero hereda de Vehiculo\n",
+    "class Triciclo(Vehiculo):\n",
+    "    \n",
+    "    # reimplementamos el inicializador\n",
+    "    def __init__(self):\n",
+    "        super().__init__('Tamalero', 10)\n",
+    "    \n",
+    "    # reimplementamos el método de acelerar\n",
+    "    def acelerar(self, porcentaje):\n",
+    "        self.rapidez = self.rapidez + self.rapidez * porcentaje "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vehículo X va a 0 km/h.\n",
+      "Vehículo X va a 25 km/h.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# instanciamos Vehiculo\n",
+    "vehiculo = Vehiculo()\n",
+    "# veamos su estado\n",
+    "vehiculo.info()\n",
+    "# modfiquemos el estado\n",
+    "vehiculo.acelerar(25)\n",
+    "# veamos su estado\n",
+    "vehiculo.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vehículo Tamalero va a 10 km/h.\n",
+      "Vehículo Tamalero va a 12.5 km/h.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# instanciamos Triciclo\n",
+    "tamalero = Triciclo()\n",
+    "# veamos su estado\n",
+    "tamalero.info()\n",
+    "# modfiquemos el estado\n",
+    "tamalero.acelerar(.25)\n",
+    "# veamos su estado\n",
+    "tamalero.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Participación F\n",
+    "\n",
+    "Implementa la clase `Pumabus` que herede de la clase `Vehiculo`, además:\n",
+    "  * Implemementa el método `desacelerar(cantidad)` sin permitir que la rapidez sea menor a 0 km/h.\n",
+    "  * Reimplementa el inicilizador `__init__` para que reciba como argumento la ruta del Puma.\n",
+    "  * Reimplementa el el método `info` para que el mensaje sea 'Aquí va el Pumita X a N km/h!', donde `X` es la ruta del Puma. \n",
+    "  * Instancia dos rutas diferentes de tu Puma."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### 9 Matplotlib\n",
     "\n",
     "[Matplotlib](https://matplotlib.org) es un bibilioteca para producir gráficas con calidad de publicación."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1698,7 +1799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1728,7 +1829,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Participación F\n",
+    "### Participación G\n",
     "\n",
     "Implementa la grafica de la función [sigmoide](https://es.wikipedia.org/wiki/Funci%C3%B3n_sigmoide):\n",
     "\n",
@@ -1740,10 +1841,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = [-5, -4, -3, -2, - 1, 0, 1, 2, 3, 4, 5]\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 9. Pandas\n",
+    "### 10 Pandas\n",
     "\n",
     "[Pandas](https://pandas.pydata.org) es una bibliteca para la manipulación de datos estructurados. Para datos tabulares provee la estructura [`Dataframe`](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.html).\n",
     "\n",
@@ -1760,24 +1871,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2021-02-13 21:39:50--  https://raw.githubusercontent.com/bereml/iap/master/datos/califs.csv\n",
-      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.111.133, 185.199.108.133, ...\n",
-      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 666 [text/plain]\n",
-      "Saving to: '../datos/califs.csv'\n",
-      "\n",
-      "../datos/califs.csv 100%[===================>]     666  --.-KB/s    in 0s      \n",
-      "\n",
-      "2021-02-13 21:39:50 (14.0 MB/s) - '../datos/califs.csv' saved [666/666]\n",
-      "\n",
+      "mkdir: cannot create directory '../datos': File exists\n",
+      "File '../datos/califs.csv' already there; not retrieving.\n",
       "prev,horas,calif\n",
       "5.6,8.2,5.1\n",
       "6.7,9.3,5.9\n",
@@ -1802,7 +1904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -2190,7 +2292,7 @@
        "49   8.8   14.4    8.6"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2208,21 +2310,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Participación G\n",
+    "### Participación H\n",
     "\n",
-    "Grafica los valores de la segunda columna en el eje $x$ y los de la segunda columna en el eje $y$."
+    "Grafica los valores de la segunda columna en el eje $x$ y los de la segunda columna en el eje $y$. Como tercer argumento de la función `plot` usa `'.'`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# listas con los valores de la segunda y tercera columnas\n",
-    "X = list(df['horas'].values)\n",
-    "Y = list(df['calif'].values)\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2230,7 +2328,7 @@
    "source": [
     "## Recomendación\n",
     "\n",
-    "[Scipy Lecture Notes](http://scipy-lectures.org/)\n",
+    "Para profundizar más sobre Python y bibliotecas de su ecosistema de computo científico recomendamos las [Scipy Lecture Notes](http://scipy-lectures.org/).\n",
     "\n",
     "![xkcd-ml](https://imgs.xkcd.com/comics/machine_learning.png)\n",
     "<div style=\"text-align: center\"> https://xkcd.com/1838/ </div>"
