fix datos dir error

--- a/libretas/1c_reglin.ipynb
+++ b/libretas/1c_reglin.ipynb
@@ -92,11 +92,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "mkdir: cannot create directory '../datos': File exists\n",
       "File '../datos/califs.csv' already there; not retrieving.\n"
      ]
     }
    ],
    "source": [
+    "! mkdir {base_dir}\n",
     "! wget -nc {URL} -O {filepath}"
    ]
   },
