--- a/libretas/1d_reglog.ipynb
+++ b/libretas/1d_reglog.ipynb
@@ -118,11 +118,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "mkdir: cannot create directory '../datos': File exists\n",
       "File '../datos/iris.csv' already there; not retrieving.\n"
      ]
     }
    ],
    "source": [
+    "! mkdir {base_dir}\n",
     "! wget -nc {URL} -O {filepath}"
    ]
   },
