--- a/libretas/1c_reglin.ipynb
+++ b/libretas/1c_reglin.ipynb
@@ -339,11 +339,11 @@
    "source": [
     "Recordemos que dado un conjunto de ejemplos con atributos ($x_1, \\dots, x_d$) y salidas $y$, la hipótesis de regresión lineal considerando un plano está dada por:\n",
     "\n",
-    "$$\\hat{y} = w_1 x_1 + \\dots + w_d x_d + b$$\n",
+    "$$\\hat{y} =  x_1 w_1 + \\dots + x_d w_d + b$$\n",
     "\n",
     "donde $w_i$ y $b$ son pesos y sesgo (parámetros) del modelo y $\\hat{y}$ la salida predicha. Podemos expresar la hipótesis en su forma vectorial como:\n",
     "\n",
-    "$$\\hat{y} = w x + b$$\n",
+    "$$\\hat{y} =  x w + b$$\n",
     "\n",
     "Nuestro trabajo consiste en estimar (aprender) los parámetros $w_i$ y $b$. Por el momento supongamos que proponemos valores para los parámetros y hagamos inferencia:"
    ]
@@ -607,7 +607,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.6.12"
   }
  },
  "nbformat": 4,
