--- a/libretas/1d_reglog.ipynb
+++ b/libretas/1d_reglog.ipynb
@@ -453,7 +453,7 @@
    "source": [
     "Recordemos que dado un conjunto de ejemplos con atributos ($x_1, \\dots, x_d$) y salidas $y$, la hipótesis de regresión lineal considerando un plano está dada por:\n",
     "\n",
-    "$$\\hat{y} = \\sigma(w_1 x_1 + \\dots + w_d x_d + b)$$\n",
+    "$$\\hat{y} = \\sigma(x_1 w_1 + \\dots +  x_d w_d + b)$$\n",
     "\n",
     "donde $w_i$ y $b$ son pesos y sesgo (parámetros) del modelo, $\\hat{y}$ la salida predicha, y $\\sigma(\\cdot)$ es la función sigmoide definida por: \n",
     "\n",
@@ -462,7 +462,7 @@
     "\n",
     "Podemos expresar la hipótesis en su forma vectorial como:\n",
     "\n",
-    "$$\\hat{y} = \\sigma(w x + b)$$\n",
+    "$$\\hat{y} = \\sigma( x w + b)$$\n",
     "\n",
     "Nuestro trabajo consiste en estimar (aprender) los parámetros $w_i$ y $b$. Por el momento supongamos que proponemos valores para los parámetros y hagamos inferencia:"
    ]
@@ -803,7 +803,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.6.12"
   }
  },
  "nbformat": 4,
