fix colab issue

--- a/libretas/1e_mnist_fcn.ipynb
+++ b/libretas/1e_mnist_fcn.ipynb
@@ -99,6 +99,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# parche para bicho en colab\n",
+    "# https://github.com/pytorch/vision/issues/1938\n",
+    "from six.moves import urllib\n",
+    "opener = urllib.request.build_opener()\n",
+    "opener.addheaders = [('User-agent', 'Mozilla/5.0')]\n",
+    "urllib.request.install_opener(opener)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -107,12 +121,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# directorio de datos\n",
-    "DATA_DIR = '../data'\n",
+    "DATA_DIR = '../datos'\n",
     "\n",
     "# tamaño del lote\n",
     "BATCH_SIZE = 32\n",
@@ -143,6 +157,8 @@
     "    x = x.permute(0, 2, 3, 1)\n",
     "    # convertimos a entero\n",
     "    x = (x.numpy()).astype(np.uint8)\n",
+    "    # aplanamos canal\n",
+    "    x = x.reshape(*x.shape[:3])\n",
     "    # desplegamos\n",
     "    display_grid(x, titles, rows, cols, figsize)\n",
     "\n",
@@ -190,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -343,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -423,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +570,7 @@
        "=========================================================================================="
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -696,14 +712,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  5%|▌         | 1/20 [00:12<03:59, 12.59s/it]"
+      "  5%|▌         | 1/20 [00:11<03:47, 11.99s/it]"
      ]
     },
     {
@@ -717,7 +733,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 10%|█         | 2/20 [00:24<03:43, 12.43s/it]"
+      " 10%|█         | 2/20 [00:23<03:29, 11.66s/it]"
      ]
     },
     {
@@ -731,7 +747,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 15%|█▌        | 3/20 [00:37<03:34, 12.62s/it]"
+      " 15%|█▌        | 3/20 [00:34<03:15, 11.48s/it]"
      ]
     },
     {
@@ -745,7 +761,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 20%|██        | 4/20 [00:50<03:23, 12.73s/it]"
+      " 20%|██        | 4/20 [00:45<03:02, 11.41s/it]"
      ]
     },
     {
@@ -759,7 +775,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 25%|██▌       | 5/20 [01:03<03:11, 12.75s/it]"
+      " 25%|██▌       | 5/20 [00:58<02:57, 11.83s/it]"
      ]
     },
     {
@@ -773,7 +789,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 30%|███       | 6/20 [01:17<03:03, 13.12s/it]"
+      " 30%|███       | 6/20 [01:10<02:46, 11.87s/it]"
      ]
     },
     {
@@ -787,7 +803,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 35%|███▌      | 7/20 [01:31<02:54, 13.40s/it]"
+      " 35%|███▌      | 7/20 [01:22<02:33, 11.83s/it]"
      ]
     },
     {
@@ -801,7 +817,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 40%|████      | 8/20 [01:45<02:42, 13.52s/it]"
+      " 40%|████      | 8/20 [01:34<02:21, 11.80s/it]"
      ]
     },
     {
@@ -815,7 +831,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 45%|████▌     | 9/20 [01:59<02:31, 13.79s/it]"
+      " 45%|████▌     | 9/20 [01:46<02:11, 11.95s/it]"
      ]
     },
     {
@@ -829,7 +845,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 50%|█████     | 10/20 [02:12<02:17, 13.70s/it]"
+      " 50%|█████     | 10/20 [01:58<02:01, 12.11s/it]"
      ]
     },
     {
@@ -843,7 +859,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 55%|█████▌    | 11/20 [02:25<02:00, 13.44s/it]"
+      " 55%|█████▌    | 11/20 [02:10<01:48, 12.00s/it]"
      ]
     },
     {
@@ -857,7 +873,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 60%|██████    | 12/20 [02:38<01:45, 13.25s/it]"
+      " 60%|██████    | 12/20 [02:22<01:34, 11.85s/it]"
      ]
     },
     {
@@ -871,7 +887,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 65%|██████▌   | 13/20 [02:51<01:31, 13.06s/it]"
+      " 65%|██████▌   | 13/20 [02:34<01:23, 11.96s/it]"
      ]
     },
     {
@@ -885,7 +901,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 70%|███████   | 14/20 [03:03<01:17, 12.95s/it]"
+      " 70%|███████   | 14/20 [02:46<01:12, 12.10s/it]"
      ]
     },
     {
@@ -899,7 +915,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 75%|███████▌  | 15/20 [03:17<01:05, 13.05s/it]"
+      " 75%|███████▌  | 15/20 [02:59<01:01, 12.30s/it]"
      ]
     },
     {
@@ -913,7 +929,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 80%|████████  | 16/20 [03:29<00:51, 12.84s/it]"
+      " 80%|████████  | 16/20 [03:11<00:48, 12.12s/it]"
      ]
     },
     {
@@ -927,7 +943,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 85%|████████▌ | 17/20 [03:41<00:37, 12.47s/it]"
+      " 85%|████████▌ | 17/20 [03:23<00:36, 12.31s/it]"
      ]
     },
     {
@@ -941,7 +957,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 90%|█████████ | 18/20 [03:52<00:24, 12.24s/it]"
+      " 90%|█████████ | 18/20 [03:35<00:24, 12.25s/it]"
      ]
     },
     {
@@ -955,7 +971,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 95%|█████████▌| 19/20 [04:04<00:12, 12.10s/it]"
+      " 95%|█████████▌| 19/20 [03:47<00:12, 12.01s/it]"
      ]
     },
     {
@@ -969,7 +985,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 20/20 [04:16<00:00, 12.82s/it]"
+      "100%|██████████| 20/20 [03:59<00:00, 11.96s/it]"
      ]
     },
     {
@@ -1003,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1031,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1077,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1106,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1158,7 +1174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
