add mnist cnn nb

--- a/libretas/2a_mnist_cnn.ipynb
+++ b/libretas/2a_mnist_cnn.ipynb
@@ -14,7 +14,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Clasificación de MNIST con un red densa\n",
+    "# Clasificación de MNIST con un red convolucional\n",
     "\n",
     "Curso: [Introducción al Aprendizaje Profundo](http://turing.iimas.unam.mx/~ricardoml/course/iap/). Profesores: [Bere](https://turing.iimas.unam.mx/~bereml/) y [Ricardo](https://turing.iimas.unam.mx/~ricardoml/) Montalvo Lezama.\n",
     "\n",
@@ -259,7 +259,9 @@
     "    # subconjunto de entrenamiento\n",
     "    train=True,\n",
     "    # transformación\n",
-    "    transform=tsfm\n",
+    "    transform=tsfm,\n",
+    "    # descaraga\n",
+    "    download=True\n",
     ")\n",
     "\n",
     "# creamos un DataLoader\n",
