add fashion cnn nbs

--- a/libretas/2a_fashion_cnn.ipynb
+++ b/libretas/2a_fashion_cnn.ipynb
@@ -7,7 +7,7 @@
     "id": "view-in-github"
    },
    "source": [
-    "<a href=\"https://colab.research.google.com/github/bereml/iap/blob/master/libretas/2a_mnist_cnn.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "<a href=\"https://colab.research.google.com/github/bereml/iap/blob/master/libretas/2b_fashion_cnn.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
   {
@@ -21,12 +21,12 @@
     "---\n",
     "---\n",
     "\n",
-    "En esta libreta veremos un ejemplo de clasificación multiclase de imágenes de dígitos implementando una red densa multicapa en PyTorch.\n",
+    "En esta libreta veremos un ejemplo de clasificación multiclase de imágenes implementando una red convolucional en PyTorch.\n",
     "\n",
-    "Emplearemos un conjunto referencia llamado [MNIST](http://yann.lecun.com/exdb/mnist/) recolectado por [Yann LeCun](http://yann.lecun.com). Está compuesto de imágenes en escala de grises de 28 × 28 píxeles que contienen dígitos entre 0 y 9 escritos a mano. El conjunto cuenta con 60,000 imágenes de entrenamiento y 10,000 de prueba.\n",
+    "[Fashion-MNIST](https://github.com/zalandoresearch/fashion-mnist) es un conjunto para remplzar MNIST. Fue recolectado con la intención de proveer un conjunto un poco más dificil que MNIST.\n",
     "\n",
-    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/2/27/MnistExamples.png\" width=\"600\"/>\n",
-    "Conjunto MNIST. Imagen tomada de Wikipedia."
+    "<img src=\"https://miro.medium.com/max/800/1*RNBs0OsymwAzDyYMk3_0Aw.jpeg\" width=\"600\"/>\n",
+    "Conjunto Fashion-MNIST. Imagen tomada de https://medium.com/@sankarchanna2k18/fashion-mnist-data-image-classification-in-tensorflow-bd22f9e680bc."
    ]
   },
   {
@@ -99,20 +99,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# parche para bicho en colab\n",
-    "# https://github.com/pytorch/vision/issues/1938\n",
-    "from six.moves import urllib\n",
-    "opener = urllib.request.build_opener()\n",
-    "opener.addheaders = [('User-agent', 'Mozilla/5.0')]\n",
-    "urllib.request.install_opener(opener)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -121,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,9 +176,7 @@
    "source": [
     "### 2.1 Tuberias de datos con PyTorch\n",
     "\n",
-    "<img src=\"https://raw.githubusercontent.com/bereml/iap/master/fig/mnist_pipeline.png\"/>\n",
-    "&nbsp;\n",
-    "Tuberia de datos para MNIST."
+    "<img src=\"https://raw.githubusercontent.com/bereml/iap/master/fig/mnist_pipeline.png\"/>"
    ]
   },
   {
@@ -214,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -290,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -368,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +372,8 @@
     "\n",
     "            # bloque conv1\n",
     "            # [N, 1, 28, 28] => [N, 4, 28, 28]\n",
-    "            nn.Conv2d(in_channels=1, out_channels=4, kernel_size=3, padding=1),\n",
+    "            nn.Conv2d(in_channels=1, out_channels=4, \n",
+    "                      kernel_size=3, padding=1),\n",
     "            # [N, 4, 28, 28]\n",
     "            nn.ReLU(),\n",
     "            # [N, 4, 28, 28] => [N, 4, 14, 14]\n",
@@ -422,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +488,7 @@
        "=========================================================================================="
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -645,14 +630,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  5%|▌         | 1/20 [00:13<04:11, 13.24s/it]"
+      "  5%|▌         | 1/20 [00:14<04:44, 14.98s/it]"
      ]
     },
     {
@@ -666,7 +651,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 10%|█         | 2/20 [00:27<04:04, 13.59s/it]"
+      " 10%|█         | 2/20 [00:29<04:22, 14.59s/it]"
      ]
     },
     {
@@ -680,7 +665,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 15%|█▌        | 3/20 [00:40<03:47, 13.41s/it]"
+      " 15%|█▌        | 3/20 [00:44<04:14, 14.99s/it]"
      ]
     },
     {
@@ -694,7 +679,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 20%|██        | 4/20 [00:54<03:39, 13.75s/it]"
+      " 20%|██        | 4/20 [01:00<04:05, 15.35s/it]"
      ]
     },
     {
@@ -708,7 +693,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 25%|██▌       | 5/20 [01:08<03:29, 13.99s/it]"
+      " 25%|██▌       | 5/20 [01:15<03:47, 15.18s/it]"
      ]
     },
     {
@@ -722,7 +707,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 30%|███       | 6/20 [01:24<03:21, 14.37s/it]"
+      " 30%|███       | 6/20 [01:30<03:30, 15.01s/it]"
      ]
     },
     {
@@ -736,7 +721,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 35%|███▌      | 7/20 [01:38<03:07, 14.39s/it]"
+      " 35%|███▌      | 7/20 [01:44<03:10, 14.66s/it]"
      ]
     },
     {
@@ -750,7 +735,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 40%|████      | 8/20 [01:53<02:53, 14.43s/it]"
+      " 40%|████      | 8/20 [01:58<02:56, 14.68s/it]"
      ]
     },
     {
@@ -764,7 +749,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 45%|████▌     | 9/20 [02:07<02:37, 14.35s/it]"
+      " 45%|████▌     | 9/20 [02:13<02:40, 14.58s/it]"
      ]
     },
     {
@@ -778,7 +763,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 50%|█████     | 10/20 [02:21<02:22, 14.26s/it]"
+      " 50%|█████     | 10/20 [02:28<02:29, 14.91s/it]"
      ]
     },
     {
@@ -792,7 +777,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 55%|█████▌    | 11/20 [02:34<02:06, 14.06s/it]"
+      " 55%|█████▌    | 11/20 [02:43<02:13, 14.87s/it]"
      ]
     },
     {
@@ -806,7 +791,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 60%|██████    | 12/20 [02:48<01:51, 13.90s/it]"
+      " 60%|██████    | 12/20 [02:57<01:57, 14.70s/it]"
      ]
     },
     {
@@ -820,7 +805,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 65%|██████▌   | 13/20 [03:02<01:36, 13.84s/it]"
+      " 65%|██████▌   | 13/20 [03:12<01:43, 14.76s/it]"
      ]
     },
     {
@@ -834,7 +819,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 70%|███████   | 14/20 [03:15<01:22, 13.77s/it]"
+      " 70%|███████   | 14/20 [03:27<01:29, 14.85s/it]"
      ]
     },
     {
@@ -848,7 +833,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 75%|███████▌  | 15/20 [03:29<01:08, 13.65s/it]"
+      " 75%|███████▌  | 15/20 [03:42<01:13, 14.75s/it]"
      ]
     },
     {
@@ -862,7 +847,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 80%|████████  | 16/20 [03:42<00:54, 13.56s/it]"
+      " 80%|████████  | 16/20 [03:57<00:59, 14.81s/it]"
      ]
     },
     {
@@ -876,7 +861,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 85%|████████▌ | 17/20 [03:56<00:40, 13.63s/it]"
+      " 85%|████████▌ | 17/20 [04:11<00:43, 14.64s/it]"
      ]
     },
     {
@@ -890,7 +875,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 90%|█████████ | 18/20 [04:09<00:27, 13.65s/it]"
+      " 90%|█████████ | 18/20 [04:26<00:29, 14.72s/it]"
      ]
     },
     {
@@ -904,7 +889,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 95%|█████████▌| 19/20 [04:28<00:15, 15.03s/it]"
+      " 95%|█████████▌| 19/20 [04:41<00:14, 14.86s/it]"
      ]
     },
     {
@@ -918,7 +903,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 20/20 [04:47<00:00, 14.37s/it]"
+      "100%|██████████| 20/20 [04:56<00:00, 14.84s/it]"
      ]
     },
     {
@@ -952,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -980,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1026,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1055,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1079,6 +1064,40 @@
     "    y_pred = torch.argmax(y_prob, 1)\n",
     "    titles = [f'V={t} P={p}' for t, p in zip(y_true, y_pred)]\n",
     "    display_batch(x, titles, ROWS, COLS)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Mini caso de estudio\n",
+    "\n",
+    "Emplearemos este ejemplo para estudiar el comportamiento de las redes conforme agregamos más capas. Para esto realizaremos las siguientes etapas e iremos registrando los resultados en la tabla al final.\n",
+    "\n",
+    "1. Agregar otro bloque Conv como se indica en la libreta `2a_fashion_cnn_eje.ipynb`.\n",
+    "\n",
+    "2. ¿Qué podemos observar? ¿Qué pasaría si entrenamos más epocas?\n",
+    "\n",
+    "3. Remplaza el optimizador `optim.SGD` con `optim.Adam` y vuelve a entrenar 20 épocas ambos modelos.\n",
+    "\n",
+    "4. ¿Qué pasa con los desempeños?\n",
+    "\n",
+    "5. Encapsula las capas del bloque Conv para que sea reutilizable y remplaza en la arquitectura.  Agrega otro bloque con 64 filtros y vuelve a entrenar.\n",
+    "\n",
+    "6. ¿Qué comportamiento se observa entre las curvas en entrenamiento y prueba en el modelo con 3 bloques?\n",
+    "\n",
+    "Resultados:\n",
+    "\n",
+    "\n",
+    "| Bloques | Épocas | Optimizador | Exactitud |\n",
+    "| ------- | ------ | ----------- | --------- |\n",
+    "| 1       | 20     | SGD         | 83.93     |\n",
+    "| 2       | 20     | SGD         |           |\n",
+    "| 1       | 50     | SGD         | 85.71     |\n",
+    "| 2       | 50     | SGD         | 85.79     |\n",
+    "| 1       | 20     | Adam        |           |\n",
+    "| 2       | 20     | Adam        |           |\n",
+    "| 3       | 20     | Adam        |           |\n"
    ]
   }
  ],
