fix fashion mnist labels dict

--- a/libretas/1f_fashion_fcn.ipynb
+++ b/libretas/1f_fashion_fcn.ipynb
@@ -126,13 +126,17 @@
     "\n",
     "# Fashion-MNIST classes\n",
     "CLASSES = {\n",
-    "    \"T-shirt/top\", \"Trouser\",\n",
-    "    \"Pullover\", \"Dress\",\n",
-    "    \"Coat\", \"Sandal\",\n",
-    "    \"Shirt\", \"Sneaker\",\n",
-    "    \"Bag\", \"Ankle boot\"\n",
+    "    0: \"T-shirt/top\", \n",
+    "    1: \"Trouser\",\n",
+    "    2: \"Pullover\",\n",
+    "    3: \"Dress\",\n",
+    "    4: \"Coat\", \n",
+    "    5: \"Sandal\",\n",
+    "    6: \"Shirt\", \n",
+    "    7: \"Sneaker\",\n",
+    "    8: \"Bag\", \n",
+    "    9: \"Ankle boot\",\n",
     "}\n",
-    "CLASSES = dict(enumerate(CLASSES))\n",
     "\n",
     "\n",
     "def display_grid(xs, titles, rows, cols, figsize=(12, 6)):\n",
