--- a/libretas/2a_fashion_cnn.ipynb
+++ b/libretas/2a_fashion_cnn.ipynb
@@ -652,7 +652,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1b8593ffa9ac41d39968dcc248f61ae1",
+       "model_id": "4ee0979511ec4dda945bc721cdb35927",
        "version_major": 2,
        "version_minor": 0
       },
@@ -839,7 +839,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Mini caso de estudio\n",
+    "## 6. Mini caso de estudio\n",
     "\n",
     "Emplearemos este ejemplo para estudiar el comportamiento de las redes conforme agregamos más capas. Para esto realizaremos las siguientes etapas e iremos registrando los resultados en la tabla al final.\n",
     "\n",
@@ -861,12 +861,12 @@
     "| Bloques | Épocas | Optimizador | Exactitud |\n",
     "| ------- | ------ | ----------- | --------- |\n",
     "| 1       | 20     | SGD         | 83.93     |\n",
-    "| 2       | 20     | SGD         |           |\n",
+    "| 2       | 20     | SGD         | 81.98     |\n",
     "| 1       | 50     | SGD         | 85.71     |\n",
     "| 2       | 50     | SGD         | 85.79     |\n",
-    "| 1       | 20     | Adam        |           |\n",
-    "| 2       | 20     | Adam        |           |\n",
-    "| 3       | 20     | Adam        |           |\n"
+    "| 1       | 20     | Adam        | 88.87     |\n",
+    "| 2       | 20     | Adam        | 89.53     |\n",
+    "| 3       | 20     | Adam        | 90.53     |\n"
    ]
   }
  ],
