add audio mix nb

--- a/libretas/2d_audio_mezcla.ipynb
+++ b/libretas/2d_audio_mezcla.ipynb
@@ -28,6 +28,26 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: torchaudio in /home/richardt/.miniconda3/envs/iap/lib/python3.8/site-packages (0.7.0a0+a853dff)\n",
+      "Requirement already satisfied: torch in /home/richardt/.miniconda3/envs/iap/lib/python3.8/site-packages (from torchaudio) (1.7.1)\n",
+      "Requirement already satisfied: typing_extensions in /home/richardt/.miniconda3/envs/iap/lib/python3.8/site-packages (from torch->torchaudio) (3.7.4.3)\n",
+      "Requirement already satisfied: numpy in /home/richardt/.miniconda3/envs/iap/lib/python3.8/site-packages (from torch->torchaudio) (1.19.2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install torchaudio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
@@ -54,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +171,7 @@
        "<IPython.lib.display.Audio object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -192,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +237,7 @@
        "<IPython.lib.display.Audio object>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -258,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +303,7 @@
        "<IPython.lib.display.Audio object>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
